--- a/package.json
+++ b/package.json
@@ -10,29 +10,39 @@
     "test": "jest"
   },
   "dependencies": {
-    "react": "19.2.0",
-    "react-native": "0.83.1",
+    "@react-native-community/slider": "^5.1.1",
     "@react-native/new-app-screen": "0.83.1",
-    "react-native-safe-area-context": "^5.5.2"
+    "@react-navigation/bottom-tabs": "^7.9.1",
+    "@react-navigation/native": "^7.1.14",
+    "@react-navigation/native-stack": "^7.9.1",
+    "react": "19.1.0",
+    "react-native": "^0.81.0",
+    "react-native-fs": "^2.20.0",
+    "react-native-nitro-modules": "^0.33.1",
+    "react-native-nitro-sound": "^0.2.10",
+    "react-native-safe-area-context": "^5.6.0",
+    "react-native-screens": "^4.19.0",
+    "react-native-track-player": "^5.0.0-alpha0-nightly-359af5a12d712d3b685530aed9b9625865a25d74",
+    "react-native-vector-icons": "^10.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@babel/preset-env": "^7.25.3",
     "@babel/runtime": "^7.25.0",
-    "@react-native-community/cli": "20.0.0",
-    "@react-native-community/cli-platform-android": "20.0.0",
-    "@react-native-community/cli-platform-ios": "20.0.0",
-    "@react-native/babel-preset": "0.83.1",
+    "@react-native-community/cli": "^20.0.0",
+    "@react-native-community/cli-platform-android": "^20.0.0",
+    "@react-native-community/cli-platform-ios": "^20.0.0",
+    "@react-native/babel-preset": "^0.81.0",
     "@react-native/eslint-config": "0.83.1",
-    "@react-native/metro-config": "0.83.1",
+    "@react-native/metro-config": "^0.81.0",
     "@react-native/typescript-config": "0.83.1",
     "@types/jest": "^29.5.13",
     "@types/react": "^19.2.0",
     "@types/react-test-renderer": "^19.1.0",
     "eslint": "^8.19.0",
-    "jest": "^29.6.3",
+    "jest": "^29.2.1",
     "prettier": "2.8.8",
-    "react-test-renderer": "19.2.0",
+    "react-test-renderer": "19.1.0",
     "typescript": "^5.8.3"
   },
   "engines": {
