--- a/ios/voicewrite/Info.plist
+++ b/ios/voicewrite/Info.plist
@@ -28,6 +28,8 @@
 </array>
 	<key>NSMicrophoneUsageDescription</key>
 <string>Give $(PRODUCT_NAME) permission to use your microphone. Your record wont be shared without your permission.</string>
+<key>NSFaceIDUsageDescription</key>
+<string>We use Face ID to secure your app.</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleDisplayName</key>
