--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@react-navigation/bottom-tabs": "^7.9.1",
     "@react-navigation/native": "^7.1.14",
     "@react-navigation/native-stack": "^7.9.1",
+    "axios": "^1.13.2",
+    "buffer": "^6.0.3",
     "react": "19.1.0",
     "react-native": "^0.81.0",
     "react-native-biometrics": "^3.0.1",
